--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -44,6 +44,10 @@ FROM node:14-slim
 # signature
 LABEL ${APP_NAME}.backend.constructor=${APP_CONSTRUCTOR}
 #
+# bring in the Node JS environment 'development' or 'production'
+ARG NODE_ENV
+ENV NODE_ENV ${NODE_ENV}
+#
 # set container’s working directory
 WORKDIR /app
 #
@@ -53,10 +57,10 @@ COPY package.json /app/package.json
 # install all Node dependencies
 RUN npm install
 #
-# Copy all App source code
+# copy all App source code
 COPY . .
 #
-# Expose port and start the application
+# expose port and start the application
 EXPOSE ${APP_BACKEND_PORT}
 #
 CMD ["npm", "start"]
