--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,15 @@
 {
   "name": "mcode-backend",
   "version": "0.0.0",
-  "description": "MicroCODE's generic MERN Backend.",
+  "description": "MicroCODE's Generic MERN Backend.",
   "main": "server.js",
   "scripts": {
     "test": "jest",
     "start": "node server.js",
     "dev": "nodemon sever.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Timothy McGuire",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -20,6 +20,12 @@
     "supertest": "^6.2.4"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.7"
   }
 }
