--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,9 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
+# dotenv environment variables file -- NO SENSITIVE INFO IN OUR .ENVs
+#.env
+#.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
