Added 'production' defaults to all 'Dockerfile'

--- a/.env.development
+++ b/.env.development
@@ -99,7 +99,7 @@
 # REACT_APP_ENV
 REACT_APP_ENV=development
 #
-# APP_DOMAIN - the name of the dmain hosting the App used throughout the build and the JS code.
+# APP_DOMAIN - the name of the domain hosting the App used throughout the build and the JS code.
 APP_DOMAIN=localhost # tjmcode.io, controlnet.io, laddersnet.io, or localhost for development
 #
 # APP_SUBDOMAIN - the name of the sub-doomain hosting the App used throughout the build and the JS code.
