--- a/.env.production
+++ b/.env.production
@@ -99,7 +99,7 @@
 # REACT_APP_ENV
 REACT_APP_ENV=production
 #
-# APP_DOMAIN - the name of the dmain hosting the App used throughout the build and the JS code.
+# APP_DOMAIN - the name of the domain hosting the App used throughout the build and the JS code.
 APP_DOMAIN=tjmcode.io # tjmcode.io, controlnet.io, laddersnet.io, or localhost for development
 #
 # APP_SUBDOMAIN - the name of the sub-doomain hosting the App used throughout the build and the JS code.
