--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -56,13 +56,15 @@ ENV \
     #
     # APP_SUBDOMAIN - the name of the sub-doomain hosting the App used throughout the build and the JS code.
     # ${APP_NAME}.${APP_DOMAIN} or localhost for development
-    APP_SUBDOMAIN=${APP_NAME}.${APP_DOMAIN} \
+    APP_SUBDOMAIN=appname.tjmcode.io \
     #
     # REACT_APP_SUBDOMAIN - the same name made accessible in the React App Front-end
-    REACT_APP_SUBDOMAIN=${APP_SUBDOMAIN} \
+    # should be equal to ${APP_SUBDOMAIN}
+    REACT_APP_SUBDOMAIN=appname.tjmcode.io \
     #
     # REACT_APP_BACKEND_PORT - taken from the standard .env file into a REACT_APP_* var for the Front-End
-    REACT_APP_BACKEND_PORT=${APP_BACKEND_PORT}
+    # should be equal to ${APP_BACKEND_PORT}
+    REACT_APP_BACKEND_PORT=8080
 #
 # set container’s working directory
 WORKDIR /app
