Corrected 'https' back to 'http' from Front-End

--- a/.env.production
+++ b/.env.production
@@ -30,7 +30,7 @@
 #       NOTES:
 #       ------
 #
-#       o  Code like a Machine™. Consistently and Explictly, Simply and for Readability. Hail CAESAR™.
+#       o  Remember... Code like a Machine™. Consistently and Explictly, Simply and for Readability. Hail CAESAR™.
 #
 #       o  When you change configuration in this file be sure to delete any DOCKER CONTAINERS and DOCKER IMAGES
 #          that still have the same names as those construcuted by this .env file, it will just reuse them without
@@ -89,6 +89,7 @@
 #                                     Define all the APP_* environment variables here in your .env file.
 #                                     Be sure to 'npm install dotenv' to enable JS code reading .env values.
 #  05-Oct-2022   TJM-MCODE  {0002}    Split into .env (common), .env.development (NODE_ENV=development), and .env.production (NODE_ENV=production)
+#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_POINT' to support '/backend' vs. ':8080' as the connection URL.
 #
 #
 #
@@ -105,8 +106,14 @@ APP_DOMAIN=tjmcode.io # tjmcode.io, controlnet.io, laddersnet.io, or localhost f
 # APP_SUBDOMAIN - the name of the sub-doomain hosting the App used throughout the build and the JS code.
 APP_SUBDOMAIN=${APP_NAME}.tjmcode.io # ${APP_NAME}.${APP_DOMAIN} or localhost for development
 #
+# APP_BACKEND_POINT - the end point of the connection URL used for the Backend/Server/Router
+APP_BACKEND_POINT="/backend"
+#
 # REACT_APP_SUBDOMAIN - the same name made accessible in the React App Front-end
 REACT_APP_SUBDOMAIN=${APP_SUBDOMAIN}
 #
 # REACT_APP_BACKEND_PORT - taken from the standard .env file into a REACT_APP_* var for the Front-End
 REACT_APP_BACKEND_PORT=${APP_BACKEND_PORT}
+#
+# REACT_APP_BACKEND_POINT - the end point of the connection URL used for the Backend/Server/Router
+REACT_APP_BACKEND_POINT=${APP_BACKEND_POINT}
