--- a/database/dockerfile
+++ b/database/dockerfile
@@ -65,9 +65,13 @@ ENV \
     #
     # REACT_APP_BACKEND_PORT - taken from the standard .env file into a REACT_APP_* var for the Front-End
     # should be equal to ${APP_BACKEND_PORT}
-    REACT_APP_BACKEND_PORT=8080
+    REACT_APP_BACKEND_PORT=8080 \
+    #
+    # REACT_APP_BACKEND_POINT - taken from the standard .env file into a REACT_APP_* var for the Front-End
+    # should be equal to ${APP_BACKEND_POINT}
+    REACT_APP_BACKEND_POINT=\backend
 #
 # expose port and start the application
-EXPOSE ${APP_DATABASE_PORT}
+EXPOSE ${APP_DATABASE_PORT:-27017}
 #
 CMD ["mongod"]
