--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
         APP_NAME: ${APP_NAME}
         NODE_ENV: ${NODE_ENV:-development}
     ports:
-      - '${APP_FRONTEND_PORT}:${APP_FRONTEND_PORT}'
+      - '${APP_FRONTEND_PORT:-3000}:${APP_FRONTEND_PORT:-3000}'
     restart: always
     networks:
       - react-express  # frontend to backend connection
@@ -132,7 +132,7 @@ services:
         APP_NAME: ${APP_NAME}
         NODE_ENV: ${NODE_ENV:-development}
     ports:
-      - '${APP_BACKEND_PORT}:${APP_BACKEND_PORT}'
+      - '${APP_BACKEND_PORT:-8080}:${APP_BACKEND_PORT:-8080}'
     restart: always
     networks:
       - react-express  # frontend to backend connection
@@ -155,7 +155,7 @@ services:
         APP_NAME: ${APP_NAME}
         NODE_ENV: ${NODE_ENV:-development}
     ports:
-      - '${APP_DATABASE_PORT}:${APP_DATABASE_PORT}'
+      - '${APP_DATABASE_PORT:-27017}:${APP_DATABASE_PORT:-27017}'
     restart: always
     networks:
       - express-mongo  # backend to database connection
