--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -65,7 +65,11 @@ ENV \
     #
     # REACT_APP_BACKEND_PORT - taken from the standard .env file into a REACT_APP_* var for the Front-End
     # should be equal to ${APP_BACKEND_PORT}
-    REACT_APP_BACKEND_PORT=8080
+    REACT_APP_BACKEND_PORT=8080 \
+    #
+    # REACT_APP_BACKEND_POINT - taken from the standard .env file into a REACT_APP_* var for the Front-End
+    # should be equal to ${APP_BACKEND_POINT}
+    REACT_APP_BACKEND_POINT=\backend
 #
 # set container’s working directory
 WORKDIR /app
@@ -80,6 +84,6 @@ RUN npm install
 COPY . .
 #
 # expose port and start the application
-EXPOSE ${APP_FRONTEND_PORT}
+EXPOSE ${APP_FRONTEND_PORT:-3000}
 #
 CMD ["npm", "start"]
