End Point syntax correction from Front-end

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -69,7 +69,7 @@ ENV \
     #
     # REACT_APP_BACKEND_POINT - taken from the standard .env file into a REACT_APP_* var for the Front-End
     # should be equal to ${APP_BACKEND_POINT}
-    REACT_APP_BACKEND_POINT=\backend
+    REACT_APP_BACKEND_POINT="/backend"
 #
 # set container’s working directory
 WORKDIR /app
