--- a/.env.production
+++ b/.env.production
@@ -89,25 +89,29 @@
 #                                     Define all the APP_* environment variables here in your .env file.
 #                                     Be sure to 'npm install dotenv' to enable JS code reading .env values.
 #  05-Oct-2022   TJM-MCODE  {0002}    Split into .env (common), .env.development (NODE_ENV=development), and .env.production (NODE_ENV=production)
-#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_POINT' to support '/backend' vs. ':8080' as the connection URL.
+#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_URL' to support '/backend' vs. ':8080' as the connection URL.
 #
 #
 #
 #
 # APP_* variables for docker-compose and dockerfile builds
 #
-#
-# REACT_APP_ENV
-REACT_APP_ENV=production
-#
-# APP_DOMAIN - the name of the domain hosting the App used throughout the build and the JS code.
+# APP_DOMAIN - the name of the domain hosting the App used throughout the build and the JS code
 APP_DOMAIN=tjmcode.io # tjmcode.io, controlnet.io, laddersnet.io, or localhost for development
 #
-# APP_SUBDOMAIN - the name of the sub-doomain hosting the App used throughout the build and the JS code.
+# APP_SUBDOMAIN - the name of the sub-doomain hosting the App used throughout the build and the JS code
 APP_SUBDOMAIN=${APP_NAME}.tjmcode.io # ${APP_NAME}.${APP_DOMAIN} or localhost for development
 #
-# APP_BACKEND_POINT - the end point of the connection URL used for the Backend/Server/Router
-APP_BACKEND_POINT="/backend"
+# APP_BACKEND_URL - taken from the standard .env file into a REACT_APP_* var for the Front-End
+# should be equal to ${APP_BACKEND_URL}
+APP_BACKEND_URL=http://${APP_SUBDOMAIN}:8080
+#
+#
+#
+# REACT_APP_* variables for REACT at runtime
+#
+# REACT_APP_ENV - for React to see our mode
+REACT_APP_ENV=production
 #
 # REACT_APP_SUBDOMAIN - the same name made accessible in the React App Front-end
 REACT_APP_SUBDOMAIN=${APP_SUBDOMAIN}
@@ -115,5 +119,6 @@ REACT_APP_SUBDOMAIN=${APP_SUBDOMAIN}
 # REACT_APP_BACKEND_PORT - taken from the standard .env file into a REACT_APP_* var for the Front-End
 REACT_APP_BACKEND_PORT=${APP_BACKEND_PORT}
 #
-# REACT_APP_BACKEND_POINT - the end point of the connection URL used for the Backend/Server/Router
-REACT_APP_BACKEND_POINT=${APP_BACKEND_POINT}
+# REACT_APP_BACKEND_URL - taken from the standard .env file into a REACT_APP_* var for the Front-End
+# should be equal to ${APP_BACKEND_URL}
+REACT_APP_BACKEND_URL=${APP_BACKEND_URL}
