Fixed volume name in 'docker-compose.yaml'

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -189,4 +189,4 @@ networks:
   express-mongo:
 #
 volumes:
-  mongodata:  # our MongoDB storage
+  ${APP_NAME}-volume:  # our MongoDB storage volume
